# barOP

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/barOP/: barMesh.h  element.h  material.h  node.h  trussElement.h  trussStructure.h
include/math/: Matrix.h
include/visualization/: trussVis.h
src/: barMesh.cpp  main.cpp  trussElement.cpp  trussStructure.cpp  trussVis.cpp
tests/: CMakeLists.txt  barMeshTests.cpp  matrixTests.cpp  trussElementTests.cpp  trussStructureTests.cpp  unitTests.cpp
